[gd_scene load_steps=5 format=3 uid="uid://diemfpp6koow7"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_vew63"]
[ext_resource type="FontFile" uid="uid://chbp4bhwd5m85" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_uvxq6"]
[ext_resource type="Theme" uid="uid://bnnyjedf5t8eb" path="res://resources/main_button_theme.tres" id="3_byr8r"]
[ext_resource type="PackedScene" uid="uid://ch5lyn0fbqmtt" path="res://scenes/menus/options_menu.tscn" id="4_v5ia6"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vew63")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.236322, 0.293356, 0.131758, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 12
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_uvxq6")
theme_override_font_sizes/font_size = 64
text = "PROJECT OMEGA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 18
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
theme = ExtResource("3_byr8r")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("3_byr8r")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../StartButton")
theme = ExtResource("3_byr8r")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Options_Menu" parent="." instance=ExtResource("4_v5ia6")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
